// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureTooltip should not show close button and not show filter button 1`] = `
<Fragment>
  <EuiDescriptionList
    listItems={Array []}
    type="column"
  />
</Fragment>
`;

exports[`FeatureTooltip should show both filter buttons and close button 1`] = `
<Fragment>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      grow={true}
    >
      <EuiFlexGroup
        alignItems="flexEnd"
        direction="row"
        justifyContent="flexEnd"
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonIcon
            aria-label="Close tooltip"
            color="primary"
            iconSize="m"
            iconType="cross"
            onClick={[Function]}
            type="button"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiDescriptionList
    listItems={
      Array [
        Object {
          "description": <div>
            <div
              className="mapFeatureTooltip__lineDescription"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bar",
                }
              }
            />
            <EuiButtonIcon
              aria-label="Filter on property"
              className="mapFeatureTooltip__filterButton"
              color="primary"
              iconSize="m"
              iconType="plusInCircle"
              onClick={[Function]}
              title="Filter on property"
              type="button"
            />
          </div>,
          "title": "foo",
        },
        Object {
          "description": <div>
            <div
              className="mapFeatureTooltip__lineDescription"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bar",
                }
              }
            />
          </div>,
          "title": "foo",
        },
      ]
    }
    type="column"
  />
</Fragment>
`;

exports[`FeatureTooltip should show close button, but not filter button 1`] = `
<Fragment>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      grow={true}
    >
      <EuiFlexGroup
        alignItems="flexEnd"
        direction="row"
        justifyContent="flexEnd"
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonIcon
            aria-label="Close tooltip"
            color="primary"
            iconSize="m"
            iconType="cross"
            onClick={[Function]}
            type="button"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiDescriptionList
    listItems={Array []}
    type="column"
  />
</Fragment>
`;

exports[`FeatureTooltip should show error message if unable to load tooltip content 1`] = `
<EuiCallOut
  color="danger"
  iconType="cross"
  size="m"
  title="Unable to load tooltip content"
>
  <p>
    Simulated load properties error
  </p>
</EuiCallOut>
`;

exports[`FeatureTooltip should show only filter button for filterable properties 1`] = `
<Fragment>
  <EuiDescriptionList
    listItems={
      Array [
        Object {
          "description": <div>
            <div
              className="mapFeatureTooltip__lineDescription"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bar",
                }
              }
            />
            <EuiButtonIcon
              aria-label="Filter on property"
              className="mapFeatureTooltip__filterButton"
              color="primary"
              iconSize="m"
              iconType="plusInCircle"
              onClick={[Function]}
              title="Filter on property"
              type="button"
            />
          </div>,
          "title": "foo",
        },
        Object {
          "description": <div>
            <div
              className="mapFeatureTooltip__lineDescription"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bar",
                }
              }
            />
          </div>,
          "title": "foo",
        },
      ]
    }
    type="column"
  />
</Fragment>
`;
